Bug 418643 - Dynamic album playlist not repopulating queue
Summary: Dynamic album playlist not repopulating queue
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: kf5
Platform: Debian unstable Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-08 21:14 UTC by Charlemagne Lasse
Modified: 2020-06-14 08:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Charlemagne Lasse 2020-03-08 21:14:58 UTC
I am using a git snapshot from 2020-02-16 as amarok because Debian removed Qt4 support today. As it turns out, it already does mostly what you would expect from Amarok. But something weird is going on with the album dynamic playlist


STEPS TO REPRODUCE

1. populate your local database
2. clear current playlist/queue
3. go to Playlists -> Dynamic playslists. 
4. Set Previous to 5 and Upcoming to 10
5. double click on "Album play"
6. start to play the tracks
7. press next 10 times

OBSERVED RESULT

I've reached the end of the playlist and no previous track was removed from the playlist.

I can work around the missing new entry by pressing "repopulate" whenever I reach the end of the playlist. But this will also not remove the already played entries (older then the "previous" setting)

EXPECTED RESULT

* Only 5 previously played tracks are still shown
* new entries are automatically added without requiring me to press "repopulate"

SOFTWARE/OS VERSIONS

KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.5

ADDITIONAL INFORMATION

Amarok just crashes when pressing Help -> Diagnostics
Comment 1 Mark Fraser 2020-03-09 15:45:07 UTC
I work around it by deleting the previous tracks, it then adds new tracks to the list.
Comment 2 Dag 2020-03-19 13:19:21 UTC
Having the exact same problem. And seeing the same things. Removing previus tracks works here to. 

Amarok 2.9.70 26.2.2020 build
Operating System: openSUSE Tumbleweed 20200314
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.7-1-default
OS Type: 64-bit
Comment 3 Charlemagne Lasse 2020-05-06 19:54:46 UTC
Looks promising https://invent.kde.org/kde/amarok/-/merge_requests/4
Comment 4 Charlemagne Lasse 2020-05-30 19:15:07 UTC
Please merge the bugfix https://invent.kde.org/multimedia/amarok/-/merge_requests/4